<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Database\Eloquent\SoftDeletes;

class StudyProgram extends Model
{
    use HasFactory, SoftDeletes;

    public $table = "study_programs";

    protected $fillable = [
        // 'head_id',
        // 'department_id',
        'code',
        'name',
    ];

    protected $casts = [
        'created_at' => 'datetime',
        'updated_at' => 'datetime',
    ];

    public function department(): BelongsTo
    {
        return $this->belongsTo(Department::class, 'department_id','id');
    }

    public function head(): BelongsTo
    {
        return $this->belongsTo(Lecturer::class, 'head_id', 'id');
    }

    public function academic_classes(): HasMany
    {
        return $this->hasMany(AcademicClass::class, 'sp_id', 'id');
    }

    public function lecturers(): HasMany
    {
        return $this->hasMany(Lecturer::class, 'sp_id', 'id');
    }

    public function scopeSearch($query, $search)
    {
        return $query->where(function ($q) use ($search) {
            $q->where('code', 'like', '%' . $search . '%')
                ->orWhere('name', 'like', '%' . $search . '%');
        });
    }

    public function scopeActive($query)
    {
        return $query->whereNull('deleted_at');
    }
}
