@startuml "Erd"


' --- Actor ---

entity "User" as user { 
    * id: int <PK>
    ---
    * name: string
    * username: string <U>
    * password: string
    * status: int
    fp_id: int
    email: string <U>
    phone_number: string <13>
    ' birth_place: string
    ' birth_date: date
    gender: int
    address: string
}

entity "Role" as role {
    * id: int <PK>
    ---
    * name: string
    * code: string <U>
}

entity FingerPrint { 
    * id: int <PK>
    * room_id: int <FK>
    ---
    * code: int <U>
    * status: int
}

entity RFID {
    * id: int <PK>
    * user_id: int <FK>
    ---
    * code: string
}

entity "Lecturer" as lecturer {
    * id: int <PK>
    * user_id: int <FK>
    * sp_id: int <FK>
    ---
    * nidn: string <U>
    * nip: string <U>
    * code: string <U>
}

entity "Student" as student {
    * id: int <PK>
    * user_id: int <FK>
    * sp_id: int <FK>
    ---
    * nim: string <U>
    * generation: year  
}

' entity "ClassLeader" as class_leader {
'     * id: int <PK>
'     ---
' }

entity LabAssistant {
    * id: int <PK>
    --- 
    * tns: string
}

' Main

entity "Department" as department {
    * id: int <PK>
    head_id: int <FK>
    ---
    * name: string
    * code: string <U>
}

entity "StudyProgram" as study_program {
    * id: int <PK>
    head_id: int <FK> 
    * department_id: int <FK>
    ---
    * name: string
    * code: string <U>
}

entity "Course" as course {
    * id: int <PK>
    ---
    * name: string
    * sks: int
    * year: YEAR
    * semester: int
} 

entity "Attendance" as attendance {
    * id: int <PK>
    * user_id: int <FK>
    * schedule_id: int <FK>
    ---
    status: int
}

entity "FacilityRequest" as facility_request {
    * id: int <PK>
    * user_id: int <FK>
    ---
    * date: date 
}

entity "Facility" as facility {
    * id: int <PK>
    * request_id: int <FK>p
    ---
    * name: string
    * code: string <U>
    * status: int
}

entity ScheduleRequest {
    * id: int <PK>
    * user_id: int <FK>
    lecturer_id: int
    ---
    * repeat_count: int
    * status: int    
    * category: int 
    information: string
}

entity "Schedule" as schedule {
    * id: int <PK>
    ' * room_id: int <FK>
    sr_id: int <FK>
    course_id: int <FK>
    ---
    * start_date: date
    ' * start_time: time
    ' * end_time: time
    * time: int
    * status: int
    * is_open: bool
    * campus: int
    information: string
}

entity AttendanceMonitoring {
    * id: int <PK>
    * schedule_id: int <FK>
    ---
    topic: string
    sub_topic: string
}

entity " AcademicClass" as AcademicClass {
    * id: int <PK>
    * sp_id: int <FK>
    cl_id: int <FK>
    ---
    * type: int
    * name: string
    * code: string 
    * generation: int
    * year: int
    * semester: int
}

entity "Room" as room {
    * id: int <PK>
    ---
    * status: int
    * name: string
    * code: string <U>
}
    
entity Computer {
    * id : int <PK>
    * room_id: int <FK>
    ---
    * computer_count: int
    * name : string
    * processor : string
    * gpu : string
    * ram_capacity : int
    * ram_type : int
    * storage_type : int
    * storage_capacity : int
    * display_size : float
    * display_resolution : int
    * display_refresh_rate : int
    * os : string
    * release_year : int
    * category : int
}

entity Application {
    * id: int <PK>
    * room_id: int <PK>
    ---
    * name: string
}

' StudyProgram and Department

department ||--|{ study_program
lecturer }|--|| study_program
student }|--|| study_program

' Roles

user }|--|{ role

user |o--o| lecturer: "Inherit"
user |o--o| student: "Inherit"
student |o--o{ LabAssistant: "Inherit"
lecturer ||--|| department: "Department Head"
lecturer ||--|| study_program: "Study Program Head"


user |o--|| RFID

' AcademicClass

study_program ||--|{ AcademicClass
student }|--|{ AcademicClass: ""
student ||--|{ AcademicClass: "AcademicClass Leader"

' Schedule

user ||--|{ ScheduleRequest
lecturer ||--|| ScheduleRequest
ScheduleRequest ||--|{ schedule
' lecturer }|--|{ schedule: ""
' student }|--|{ schedule: ""
room }|--|{ schedule: ""
course ||--|{ schedule:""
schedule ||--|| AttendanceMonitoring

' Attendanceu

user ||--|{ attendance: ""
schedule ||--|{ attendance: ""

' Course

LabAssistant }|--|| course
lecturer }|--|{ course: ""
course }|--|{ AcademicClass

' Room

room ||--|{ Computer
room ||--|{ Application
room ||--|| FingerPrint

' Facility
user ||--|{ facility_request
facility_request ||--|{ facility


@enduml